--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
