--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.6",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "heroku": "^7.62.0",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
